update swagger error
